chore: updated pois

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -58,3 +58,11 @@
 .qui{
     background-image: url('/asset/qui.png');
 }
+
+.ambulanza{
+    background-image: url('asset/ambulanza.png');
+}
+
+.arte{
+    background-image: url('asset/arte.png');
+}
